--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/helmet": "^13.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.2",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.9",
     "fastify": "^5.6.2",
